--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,15 +39,9 @@
 
     </form>
 </div>
+<!--  para que la interacion se quede en el componente padre.-->
+<!-- darle nombre indetificativo  -->
+<app-empleado-hijo-c *ngFor="let empleado of emplados; let i = index" [empleadoDeLista]="empleado" [indice]="i"></app-empleado-hijo-c>
 
 
-<div class="container">
-    <div class="row">
-        <div class="col">
-
-            <div *ngFor="let empleado of emplados; let i = index">
-                {{i+1}}: {{empleado.nombre}} {{empleado.apellido}} {{empleado.cargo}} {{empleado.salario}}€
-            </div>
-        </div>
-    </div>
-</div>
+<br>
